--- a/index.html
+++ b/index.html
@@ -3,10 +3,113 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>francisreal.com</title>
+    <meta name="description" content="Francis Real — minimal experiment." />
+    <title>Francis Real</title>
+    <style>
+      :root {
+        color-scheme: only dark;
+        --ink: #ffffff;
+        --void: #000000;
+        --neon: #39ff14;
+      }
+
+      * {
+        box-sizing: border-box;
+        margin: 0;
+        padding: 0;
+      }
+
+      body {
+        min-height: 100vh;
+        background: var(--void);
+        color: var(--ink);
+        font-family: "Space Grotesk", "Inter", system-ui, sans-serif;
+        overflow: hidden;
+      }
+
+      .dvd {
+        position: absolute;
+        left: 10vw;
+        top: 20vh;
+        font-size: clamp(1.8rem, 3vw, 3rem);
+        letter-spacing: 0.08em;
+        text-transform: lowercase;
+        color: var(--ink);
+        cursor: pointer;
+        user-select: none;
+        white-space: nowrap;
+        transition: color 0.2s ease;
+      }
+
+      .dvd:hover {
+        color: var(--neon);
+      }
+
+      @media (prefers-reduced-motion: reduce) {
+        .dvd {
+          transition: none;
+        }
+      }
+    </style>
   </head>
   <body>
-    <h1>francisreal.com</h1>
-    <p>Hosted on GitHub Pages.</p>
+    <div class="dvd" role="button" tabindex="0">hi, my name is francis</div>
+
+    <script>
+      const dvd = document.querySelector(".dvd");
+      let x = window.innerWidth * 0.1;
+      let y = window.innerHeight * 0.2;
+      let vx = 2.2;
+      let vy = 1.8;
+
+      const updatePosition = () => {
+        const bounds = dvd.getBoundingClientRect();
+        x += vx;
+        y += vy;
+
+        if (x <= 0 || x + bounds.width >= window.innerWidth) {
+          vx *= -1;
+          x = Math.max(0, Math.min(x, window.innerWidth - bounds.width));
+        }
+
+        if (y <= 0 || y + bounds.height >= window.innerHeight) {
+          vy *= -1;
+          y = Math.max(0, Math.min(y, window.innerHeight - bounds.height));
+        }
+
+        dvd.style.transform = `translate(${x}px, ${y}px)`;
+        requestAnimationFrame(updatePosition);
+      };
+
+      const repelFrom = (clientX, clientY) => {
+        const rect = dvd.getBoundingClientRect();
+        const centerX = rect.left + rect.width / 2;
+        const centerY = rect.top + rect.height / 2;
+        const dx = centerX - clientX;
+        const dy = centerY - clientY;
+        const magnitude = Math.hypot(dx, dy) || 1;
+        const boost = 6;
+        vx = (dx / magnitude) * boost;
+        vy = (dy / magnitude) * boost;
+      };
+
+      dvd.addEventListener("click", (event) => {
+        repelFrom(event.clientX, event.clientY);
+      });
+
+      dvd.addEventListener("keydown", (event) => {
+        if (event.key === "Enter" || event.key === " ") {
+          const rect = dvd.getBoundingClientRect();
+          repelFrom(rect.left + rect.width / 2, rect.top + rect.height / 2);
+        }
+      });
+
+      window.addEventListener("resize", () => {
+        x = Math.min(x, window.innerWidth - dvd.offsetWidth);
+        y = Math.min(y, window.innerHeight - dvd.offsetHeight);
+      });
+
+      updatePosition();
+    </script>
   </body>
 </html>
